# SchoolAPI

./: .gitignore  LICENSE  README.md  req.txt  setup.cfg
.github/workflows/: dev.yaml
backend/config/: settings.py  swagger.py  urls.py
backend/main/: admin.py  models.py  serializer.py  urls.py  views.py
backend/main/migrations/: 0001_initial.py  0002_category_section_category.py  0003_section_image.py  0004_alter_city_country.py
backend/main/tests/: test_api_city.py  test_api_country.py  test_api_school.py  test_auth.py  test_serializers.py
backend/oauth/: admin.py  models.py  serializer.py  urls.py  utils.py  views.py
backend/oauth/migrations/: 0001_initial.py
