[flake8]
exclude = .git ,__pycache__, .venv, htmlcov, env/, swagger.py
max-line-length = 120
max-complexity = 8
ignore = F403 , F405 , W293 , W504 ,E123, E127, E731, E122, E128, F811

[metadata]
name = Akib service
author = alone
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.10
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    flake8>=3.9